@@ -25,6 +25,15 @@
 
 CHANGELOG
 
+* Thu Oct 17 2013 Massimo Siani <massimo.siani@skysql.com>
+- Add support for delta values in JS monitors
+- Select the log verbosity by setting a variable in the init script
+- Use IP if hostname is not set
+
+* Wed Oct 16 2013 Massimo Siani <massimo.siani@skysql.com>
+- Add monitor cache
+- Improve configuration loading
+
 * Thu Oct 10 2013 Massimo Siani <massimo.siani@skysql.com>
 - Add init script
 
